Move files back to root structure and fix media paths

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <div class="hero-lottie-wrapper" style="display:flex;align-items:center;height:100%;position:relative;z-index:2;">
                             <lottie-player 
                                 id="hero-lottie-animation"
-                                src="../media/Man Working on Laptop in Office.json" 
+                                src="media/Man Working on Laptop in Office.json" 
                                 background="transparent" 
                                 speed="1" 
                                 style="height:320px;width:320px;margin-left:auto;display:block;" 
@@ -499,7 +499,7 @@
             <!-- Profile Card -->
             <div class="profile-card animate-fade-in">
                 <div class="profile-avatar" style="position:relative;">
-                    <img src="../media/Vaishnavi .jpg" alt="Vaishnavi Gupta" style="object-fit:cover;width:100px;height:100px;border-radius:50%;border:3px solid #38bdf8;box-shadow:0 2px 8px #0002;" />
+                    <img src="media/Vaishnavi .jpg" alt="Vaishnavi Gupta" style="object-fit:cover;width:100px;height:100px;border-radius:50%;border:3px solid #38bdf8;box-shadow:0 2px 8px #0002;" />
                 </div>
                 <div class="profile-info">
                     <h2 id="profileName">Vaishnavi Gupta</h2>
@@ -655,7 +655,7 @@
                 <div class="team-room-grid">
                     <div class="team-member-box" style="background:linear-gradient(135deg,#f8fafc 0%,#f0fdf4 100%);border-radius:16px;box-shadow:0 2px 12px #0001;padding:20px 18px 18px 18px;display:flex;flex-direction:column;align-items:center;min-width:200px;max-width:240px;border:2px solid #22c55e;gap:8px;">
                         <div style="width:60px;height:60px;border-radius:50%;overflow:hidden;background:#fbbf24;margin-bottom:8px;display:flex;align-items:center;justify-content:center;">
-                            <img src="../media/anurag maurya.jpg" alt="Anurag Maurya" style="width:100%;height:100%;object-fit:cover;" />
+                            <img src="media/anurag maurya.jpg" alt="Anurag Maurya" style="width:100%;height:100%;object-fit:cover;" />
                         </div>
                         <div class="team-name" style="font-weight:700;font-size:1.08em;">Anurag Maurya</div>
                         <div class="team-role" style="font-size:0.98em;color:#16a34a;">Team Lead, Visionary & Web Developer</div>
@@ -664,7 +664,7 @@
                     </div>
                     <div class="team-member-box" style="background:linear-gradient(135deg,#f8fafc 0%,#f0fdf4 100%);border-radius:16px;box-shadow:0 2px 12px #0001;padding:20px 18px 18px 18px;display:flex;flex-direction:column;align-items:center;min-width:200px;max-width:240px;border:2px solid #38bdf8;gap:8px;">
                         <div style="width:60px;height:60px;border-radius:50%;overflow:hidden;background:#38bdf8;margin-bottom:8px;display:flex;align-items:center;justify-content:center;">
-                            <img src="../media/Vaishnavi .jpg" alt="Vaishnavi Gupta" style="width:100%;height:100%;object-fit:cover;" />
+                            <img src="media/Vaishnavi .jpg" alt="Vaishnavi Gupta" style="width:100%;height:100%;object-fit:cover;" />
                         </div>
                         <div class="team-name" style="font-weight:700;font-size:1.08em;">Vaishnavi Gupta</div>
                         <div class="team-role" style="font-size:0.98em;color:#38bdf8;">UI/UX & Presentation Designer</div>
@@ -673,7 +673,7 @@
                     </div>
                     <div class="team-member-box" style="background:linear-gradient(135deg,#f8fafc 0%,#f0fdf4 100%);border-radius:16px;box-shadow:0 2px 12px #0001;padding:20px 18px 18px 18px;display:flex;flex-direction:column;align-items:center;min-width:200px;max-width:240px;border:2px solid #22c55e;gap:8px;">
                         <div style="width:60px;height:60px;border-radius:50%;overflow:hidden;background:#22c55e;margin-bottom:8px;display:flex;align-items:center;justify-content:center;">
-                            <img src="../media/mayank.jpg" alt="Mayank Kumar" style="width:100%;height:100%;object-fit:cover;" />
+                            <img src="media/mayank.jpg" alt="Mayank Kumar" style="width:100%;height:100%;object-fit:cover;" />
                         </div>
                         <div class="team-name" style="font-weight:700;font-size:1.08em;">Mayank Kumar</div>
                         <div class="team-role" style="font-size:0.98em;color:#22c55e;">Core Web Developer</div>
@@ -682,7 +682,7 @@
                     </div>
                     <div class="team-member-box" style="background:linear-gradient(135deg,#f8fafc 0%,#f0fdf4 100%);border-radius:16px;box-shadow:0 2px 12px #0001;padding:20px 18px 18px 18px;display:flex;flex-direction:column;align-items:center;min-width:200px;max-width:240px;border:2px solid #a78bfa;gap:8px;">
                         <div style="width:60px;height:60px;border-radius:50%;overflow:hidden;background:#a78bfa;margin-bottom:8px;display:flex;align-items:center;justify-content:center;">
-                            <img src="../media/Sia.jpg" alt="Sia" style="width:100%;height:100%;object-fit:cover;" />
+                            <img src="media/Sia.jpg" alt="Sia" style="width:100%;height:100%;object-fit:cover;" />
                         </div>
                         <div class="team-name" style="font-weight:700;font-size:1.08em;">Sia</div>
                         <div class="team-role" style="font-size:0.98em;color:#a78bfa;">Presentation Specialist</div>
@@ -691,7 +691,7 @@
                     </div>
                     <div class="team-member-box" style="background:linear-gradient(135deg,#f8fafc 0%,#f0fdf4 100%);border-radius:16px;box-shadow:0 2px 12px #0001;padding:20px 18px 18px 18px;display:flex;flex-direction:column;align-items:center;min-width:200px;max-width:240px;border:2px solid #f472b6;gap:8px;">
                         <div style="width:60px;height:60px;border-radius:50%;overflow:hidden;background:#f472b6;margin-bottom:8px;display:flex;align-items:center;justify-content:center;">
-                            <img src="../media/smarath.jpg" alt="Smarth" style="width:100%;height:100%;object-fit:cover;" />
+                            <img src="media/smarath.jpg" alt="Smarth" style="width:100%;height:100%;object-fit:cover;" />
                         </div>
                         <div class="team-name" style="font-weight:700;font-size:1.08em;">Smarth</div>
                         <div class="team-role" style="font-size:0.98em;color:#f472b6;">Quality Assurance (QA) Analyst</div>
@@ -700,7 +700,7 @@
                     </div>
                     <div class="team-member-box" style="background:linear-gradient(135deg,#f8fafc 0%,#f0fdf4 100%);border-radius:16px;box-shadow:0 2px 12px #0001;padding:20px 18px 18px 18px;display:flex;flex-direction:column;align-items:center;min-width:200px;max-width:240px;border:2px solid #ff9800;gap:8px;">
                         <div style="width:60px;height:60px;border-radius:50%;overflow:hidden;background:#ff9800;margin-bottom:8px;display:flex;align-items:center;justify-content:center;">
-                            <img src="../media/shaina2.jpg" alt="Shaina" style="width:100%;height:100%;object-fit:cover;" />
+                            <img src="media/shaina2.jpg" alt="Shaina" style="width:100%;height:100%;object-fit:cover;" />
                         </div>
                         <div class="team-name" style="font-weight:700;font-size:1.08em;">Shaina</div>
                         <div class="team-role" style="font-size:0.98em;color:#ff9800;">Lead Presenter</div>
